tests/snapshots/regression-nosferatu_income-stable_skills_0.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Punisher
ship/capacitorStablePercentage               = 70.823170
ship/maxTargetsCharacter                     = 0.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 10.000000
ship/passiveShieldEffectiveRechargeRate      = 1.931034
ship/passiveShieldRechargeRate               = 1.400000
ship/armorEffectiveRepairRate                = 22.716049
ship/armorRepairRate                         = 15.333333
ship/velocityBoost                           = 452.662722
ship/ehp                                     = 1895.141133
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.187500
ship/armorExplosiveDamageEffectiveResonance  = 0.200000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 482.758615
ship/hullEhp                                 = 671.641774
ship/armorEhp                                = 740.740744
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/powerFree                               = 24.000000
ship/cpuFree                                 = 79.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 46.666667
ship/capacitorPeakDelta                      = 2.333333
ship/capacitorPeakLoad                       = 2.666667
ship/capacitorPeakRecharge                   = 5.000000
ship/alignTime                               = 6.794229
ship/mass                                    = 1690000.000000
ship/powerLoad                               = 43.000000
ship/maxVelocity                             = 1961.952663
ship/cpuLoad                                 = 61.000000
ship/shipBonusAF                             = 0.000000
ship/capacitorCapacity                       = 320.000005
ship/shipBonus2AF                            = 0.000000
ship/shipBonusGC                             = 0.000000
ship/shipBonusCC                             = 0.000000
ship/shipBonusMB                             = 0.000000
ship/shipBonusCB                             = 0.000000
ship/shipBonusAB                             = 0.000000
ship/shipBonusMI                             = 0.000000
ship/shipBonusAI                             = 0.000000
ship/shipBonusCI                             = 0.000000
ship/shipBonusGI                             = 0.000000
ship/signatureRadius                         = 212.750000
ship/shipBonusUF1                            = 0.000000
ship/shipBonusUF2                            = 0.000000
ship/shipBonusUC1                            = 0.000000
ship/shipBonusUC2                            = 0.000000
ship/shipBonusUB1                            = 0.000000
ship/shipBonusUB2                            = 0.000000
ship/shipBonusOreDestroyer1                  = 0.000000
ship/shipBonusOreDestroyer2                  = 0.000000
ship/shipBonusOreDestroyer3                  = 0.000000
ship/shipBonusSoEECS1                        = 0.000000
ship/shipBonusSoEECS2                        = 0.000000
ship/shipBonusSoEECS3                        = 0.000000
ship/shipBonusSoEECS4                        = 0.000000
ship/shipBonusSoEECS5                        = 0.000000
ship/shipBonusAB3                            = 0.000000

outgoing_effect_1/type                  = Small Energy Nosferatu II
outgoing_effect_1/effect                = capacitorPeakLoadTaken
outgoing_effect_1/capacitorTransferRate = 4.000000
outgoing_effect_1/maxRange              = 5000.000000
outgoing_effect_1/falloffEffectiveness  = 2500.000000
outgoing_effect_1/remoteResistanceID    = 2045.000000
outgoing_effect_2/type                  = Small Energy Nosferatu II
outgoing_effect_2/effect                = capacitorPeakLoadTaken
outgoing_effect_2/capacitorTransferRate = 4.000000
outgoing_effect_2/maxRange              = 5000.000000
outgoing_effect_2/falloffEffectiveness  = 2500.000000
outgoing_effect_2/remoteResistanceID    = 2045.000000

high_1-2/type                  = Small Energy Nosferatu II
high_1-2/state                 = active
high_1-2/capacitorTransferRate = 4.000000
high_1-2/capacitorPeakLoad     = -4.000000
high_1-2/cycleTime             = 2500.000000

medium_1/type              = 5MN Microwarpdrive II
medium_1/state             = active
medium_1/capacitorPeakLoad = 4.000000
medium_1/cycleTime         = 10000.000000

low_1/type              = Small Armor Repairer II
low_1/state             = active
low_1/armorRepairRate   = 15.333333
low_1/capacitorPeakLoad = 6.666667
low_1/cycleTime         = 6000.000000

ship                             = skill Amarr Frigate needs 1 has 0
ship                             = skill Spaceship Command needs 1 has 0
high_1/Small Energy Nosferatu II = skill Capacitor Emission Systems needs 3 has 0
high_1/Small Energy Nosferatu II = skill Power Grid Management needs 3 has 0
high_1/Small Energy Nosferatu II = skill Science needs 2 has 0
high_2/Small Energy Nosferatu II = skill Capacitor Emission Systems needs 3 has 0
high_2/Small Energy Nosferatu II = skill Power Grid Management needs 3 has 0
high_2/Small Energy Nosferatu II = skill Science needs 2 has 0
medium_1/5MN Microwarpdrive II   = skill High Speed Maneuvering needs 3 has 0
medium_1/5MN Microwarpdrive II   = skill Navigation needs 3 has 0
medium_1/5MN Microwarpdrive II   = skill Afterburner needs 3 has 0
low_1/Small Armor Repairer II    = skill Repair Systems needs 3 has 0
low_1/Small Armor Repairer II    = skill Mechanics needs 3 has 0
