tests/snapshots/regression-nosferatu_income-stable_skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Punisher
ship/capacitorStablePercentage               = 74.848171
ship/maxTargetsCharacter                     = 25.000000
ship/maxTargets                              = 4.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 12.000000
ship/passiveShieldEffectiveRechargeRate      = 3.218391
ship/passiveShieldRechargeRate               = 2.333333
ship/armorEffectiveRepairRate                = 37.860082
ship/armorRepairRate                         = 20.444444
ship/velocityBoost                           = 565.828402
ship/ehp                                     = 2600.407899
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.130000
ship/armorKineticDamageEffectiveResonance    = 0.150000
ship/armorExplosiveDamageEffectiveResonance  = 0.160000
ship/armorEmDamageEffectiveResonance         = 0.100000
ship/shieldEhp                               = 603.448268
ship/hullEhp                                 = 839.552218
ship/armorEhp                                = 1157.407413
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.540000
ship/powerFree                               = 40.750000
ship/cpuFree                                 = 114.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 53.333334
ship/capacitorPeakDelta                      = 4.444445
ship/capacitorPeakLoad                       = 3.888889
ship/capacitorPeakRecharge                   = 8.333333
ship/alignTime                               = 4.586105
ship/mass                                    = 1690000.000000
ship/hp                                      = 562.500000
ship/powerOutput                             = 83.750000
ship/powerLoad                               = 43.000000
ship/maxVelocity                             = 2954.613535
ship/cpuOutput                               = 175.000000
ship/cpuLoad                                 = 61.000000
ship/rechargeRate                            = 120000.000000
ship/agility                                 = 1.957500
ship/maxTargetRange                          = 31250.000000
ship/scanSpeed                               = 1500.000000
ship/warpCapacitorNeed                       = 0.000001
ship/scanRadarStrength                       = 12.000000
ship/shieldCapacity                          = 437.500000
ship/armorHP                                 = 625.000000
ship/armorEmDamageResonance                  = 0.400000
ship/armorExplosiveDamageResonance           = 0.640000
ship/armorKineticDamageResonance             = 0.600000
ship/armorThermalDamageResonance             = 0.520000
ship/maxResearchGangSize                     = 30.000000
ship/shipBonusAF                             = -20.000000
ship/shieldRechargeRate                      = 468750.000000
ship/capacitorCapacity                       = 400.000006
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = -50.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/signatureRadius                         = 212.750000
ship/scanResolution                          = 800.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

outgoing_effect_1/type                  = Small Energy Nosferatu II
outgoing_effect_1/effect                = capacitorPeakLoadTaken
outgoing_effect_1/capacitorTransferRate = 4.000000
outgoing_effect_1/maxRange              = 5000.000000
outgoing_effect_1/falloffEffectiveness  = 2500.000000
outgoing_effect_1/remoteResistanceID    = 2045.000000
outgoing_effect_2/type                  = Small Energy Nosferatu II
outgoing_effect_2/effect                = capacitorPeakLoadTaken
outgoing_effect_2/capacitorTransferRate = 4.000000
outgoing_effect_2/maxRange              = 5000.000000
outgoing_effect_2/falloffEffectiveness  = 2500.000000
outgoing_effect_2/remoteResistanceID    = 2045.000000

high_1-2/type                  = Small Energy Nosferatu II
high_1-2/state                 = active
high_1-2/capacitorTransferRate = 4.000000
high_1-2/capacitorPeakLoad     = -4.000000
high_1-2/cycleTime             = 2500.000000
high_1-2/heatDamage            = 0.862500

medium_1/type              = 5MN Microwarpdrive II
medium_1/state             = active
medium_1/capacitorPeakLoad = 3.000000
medium_1/cycleTime         = 10000.000000
medium_1/capacitorNeed     = 30.000000
medium_1/speedFactor       = 637.500000
medium_1/heatDamage        = 14.250000

low_1/type              = Small Armor Repairer II
low_1/state             = active
low_1/armorRepairRate   = 20.444444
low_1/capacitorPeakLoad = 8.888889
low_1/cycleTime         = 4500.000000
low_1/duration          = 4500.000000
low_1/heatDamage        = 4.050000
